// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/table/TableRow should match snapshot 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="TableRow octo-table-row hidden"
      data-test="database-row-card-1"
      style="background-color: transparent; z-index: 85; opacity: 1; cursor: move;"
    >
      <div
        class="MuiStack-root css-1v111ru-MuiStack-root"
      >
        <div
          class="icons row-actions"
          draggable="true"
          style="padding: 0px;"
        >
          <div
            class="charm-drag-handle disable-drag-selection MuiBox-root css-0"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-colorSecondary MuiSvgIcon-fontSizeMedium css-urm4tf-MuiSvgIcon-root"
              data-testid="DragIndicatorIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2m-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="octo-table-cell title-cell MuiBox-root css-v7v99c"
      >
        <div
          style="display: flex; width: 100%;"
        >
          <div
            class="octo-icontitle"
            style="align-self: flex-start; align-items: flex-start;"
          >
            <div
              class="css-1s68mph"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1yplxme-MuiSvgIcon-root"
                data-testid="InsertDriveFileOutlinedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8zM6 20V4h7v5h5v11z"
                />
              </svg>
            </div>
            <div
              style="width: 100%; height: 100%;"
            >
              <div
                style="height: 100%;"
              >
                <div
                  class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth css-1e8l9jl-MuiInputBase-root"
                  spellcheck="true"
                >
                  <input
                    class="MuiInputBase-input Editable octo-propertyvalue css-f5ijlv-MuiInputBase-input"
                    placeholder="Untitled"
                    type="text"
                    value="Page Title"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="open-button"
            data-test="database-open-button-card-1"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-ihfry6-MuiTypography-root-MuiLink-root"
              href="/card-1"
              style="text-decoration: none;"
            >
              <button
                class="Button size--small"
                type="button"
              >
                <span>
                  Open
                </span>
              </button>
            </a>
          </div>
        </div>
      </div>
      <div
        class="octo-table-cell"
        style="flex-grow: 1;"
      />
    </div>
  </span>
</div>
`;

exports[`components/table/TableRow should match snapshot, display properties 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="TableRow octo-table-row hidden"
      data-test="database-row-card-1"
      style="background-color: transparent; z-index: 85; opacity: 1; cursor: move;"
    >
      <div
        class="MuiStack-root css-1v111ru-MuiStack-root"
      >
        <div
          class="icons row-actions"
          draggable="true"
          style="padding: 0px;"
        >
          <div
            class="charm-drag-handle disable-drag-selection MuiBox-root css-0"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-colorSecondary MuiSvgIcon-fontSizeMedium css-urm4tf-MuiSvgIcon-root"
              data-testid="DragIndicatorIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2m-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="octo-table-cell title-cell MuiBox-root css-v7v99c"
      >
        <div
          style="display: flex; width: 100%;"
        >
          <div
            class="octo-icontitle"
            style="align-self: flex-start; align-items: flex-start;"
          >
            <div
              class="css-1s68mph"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1yplxme-MuiSvgIcon-root"
                data-testid="InsertDriveFileOutlinedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8zM6 20V4h7v5h5v11z"
                />
              </svg>
            </div>
            <div
              style="width: 100%; height: 100%;"
            >
              <div
                style="height: 100%;"
              >
                <div
                  class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth css-1e8l9jl-MuiInputBase-root"
                  spellcheck="true"
                >
                  <input
                    class="MuiInputBase-input Editable octo-propertyvalue css-f5ijlv-MuiInputBase-input"
                    placeholder="Untitled"
                    type="text"
                    value="Page Title"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="open-button"
            data-test="database-open-button-card-1"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-ihfry6-MuiTypography-root-MuiLink-root"
              href="/card-1"
              style="text-decoration: none;"
            >
              <button
                class="Button size--small"
                type="button"
              >
                <span>
                  Open
                </span>
              </button>
            </a>
          </div>
        </div>
      </div>
      <div
        class="octo-table-cell"
        data-test="database-card-card-1-column-property1"
        style="align-items: flex-start; width: 100px; overflow-x: hidden;"
      >
        <div
          style="width: 100%; height: 100%;"
        >
          <div
            style="height: 100%;"
          >
            <div
              class="MuiStack-root css-1gl94ry-MuiStack-root"
              data-test="closed-select-input"
            >
              <div
                class="MuiStack-root css-1a59yxd-MuiStack-root"
                data-test="select-preview"
              >
                <div
                  class="MuiStack-root css-b3ouwx-MuiStack-root"
                  data-mui-internal-clone-element="true"
                >
                  <div
                    class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorTurquoise MuiChip-filledTurquoise css-1b9i3vx-MuiChip-root"
                    data-test="select-preview-value-value1"
                  >
                    <span
                      class="MuiChip-label MuiChip-labelSmall css-3fh3fk-MuiChip-label"
                    >
                      value 1
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="octo-table-cell"
        data-test="database-card-card-1-column-property2"
        style="align-items: flex-start; width: 100px; overflow-x: hidden;"
      >
        <div
          style="width: 100%; height: 100%;"
        >
          <div
            style="height: 100%;"
          >
            <div
              class="MuiStack-root css-1gl94ry-MuiStack-root"
              data-test="closed-select-input"
            >
              <div
                class="MuiStack-root css-1a59yxd-MuiStack-root"
                data-test="select-preview"
              >
                <div
                  class="MuiStack-root css-b3ouwx-MuiStack-root"
                  data-mui-internal-clone-element="true"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="octo-table-cell"
        style="flex-grow: 1;"
      />
    </div>
  </span>
</div>
`;

exports[`components/table/TableRow should match snapshot, isSelected 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="TableRow octo-table-row selected hidden"
      data-test="database-row-card-1"
      style="background-color: transparent; z-index: 85; opacity: 1; cursor: move;"
    >
      <div
        class="MuiStack-root css-1v111ru-MuiStack-root"
      >
        <div
          class="icons row-actions"
          draggable="true"
          style="padding: 0px;"
        >
          <div
            class="charm-drag-handle disable-drag-selection MuiBox-root css-0"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-colorSecondary MuiSvgIcon-fontSizeMedium css-urm4tf-MuiSvgIcon-root"
              data-testid="DragIndicatorIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2m-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="octo-table-cell title-cell MuiBox-root css-v7v99c"
      >
        <div
          style="display: flex; width: 100%;"
        >
          <div
            class="octo-icontitle"
            style="align-self: flex-start; align-items: flex-start;"
          >
            <div
              class="css-1s68mph"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1yplxme-MuiSvgIcon-root"
                data-testid="InsertDriveFileOutlinedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8zM6 20V4h7v5h5v11z"
                />
              </svg>
            </div>
            <div
              style="width: 100%; height: 100%;"
            >
              <div
                style="height: 100%;"
              >
                <div
                  class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth css-1e8l9jl-MuiInputBase-root"
                  spellcheck="true"
                >
                  <input
                    class="MuiInputBase-input Editable octo-propertyvalue css-f5ijlv-MuiInputBase-input"
                    placeholder="Untitled"
                    type="text"
                    value="Page Title"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="open-button"
            data-test="database-open-button-card-1"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-ihfry6-MuiTypography-root-MuiLink-root"
              href="/card-1"
              style="text-decoration: none;"
            >
              <button
                class="Button size--small"
                type="button"
              >
                <span>
                  Open
                </span>
              </button>
            </a>
          </div>
        </div>
      </div>
      <div
        class="octo-table-cell"
        style="flex-grow: 1;"
      />
    </div>
  </span>
</div>
`;

exports[`components/table/TableRow should match snapshot, read-only 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="TableRow octo-table-row hidden"
      data-test="database-row-card-1"
      style="background-color: transparent; z-index: 85; opacity: 1; cursor: default;"
    >
      <div
        class="octo-table-cell title-cell MuiBox-root css-v7v99c"
      >
        <div
          style="display: flex; width: 100%;"
        >
          <div
            class="octo-icontitle"
            style="align-self: flex-start; align-items: flex-start;"
          >
            <div
              class="css-1s68mph"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1yplxme-MuiSvgIcon-root"
                data-testid="InsertDriveFileOutlinedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8zM6 20V4h7v5h5v11z"
                />
              </svg>
            </div>
            <div
              style="width: 100%; height: 100%;"
            >
              <div
                style="height: 100%;"
              >
                <div
                  class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth Mui-readOnly MuiInputBase-readOnly css-1e8l9jl-MuiInputBase-root"
                  spellcheck="true"
                >
                  <input
                    class="MuiInputBase-input Mui-readOnly Editable readonly octo-propertyvalue MuiInputBase-readOnly css-f5ijlv-MuiInputBase-input"
                    placeholder="Untitled"
                    readonly=""
                    type="text"
                    value="Page Title"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="open-button"
            data-test="database-open-button-card-1"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-ihfry6-MuiTypography-root-MuiLink-root"
              href="/card-1"
              style="text-decoration: none;"
            >
              <button
                class="Button size--small"
                type="button"
              >
                <span>
                  Open
                </span>
              </button>
            </a>
          </div>
        </div>
      </div>
      <div
        class="octo-table-cell"
        style="flex-grow: 1;"
      />
    </div>
  </span>
</div>
`;

exports[`components/table/TableRow should match snapshot, resizing column 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="TableRow octo-table-row hidden"
      data-test="database-row-card-1"
      style="background-color: transparent; z-index: 85; opacity: 1; cursor: move;"
    >
      <div
        class="MuiStack-root css-1v111ru-MuiStack-root"
      >
        <div
          class="icons row-actions"
          draggable="true"
          style="padding: 0px;"
        >
          <div
            class="charm-drag-handle disable-drag-selection MuiBox-root css-0"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-colorSecondary MuiSvgIcon-fontSizeMedium css-urm4tf-MuiSvgIcon-root"
              data-testid="DragIndicatorIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2m-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="octo-table-cell title-cell MuiBox-root css-v7v99c"
      >
        <div
          style="display: flex; width: 100%;"
        >
          <div
            class="octo-icontitle"
            style="align-self: flex-start; align-items: flex-start;"
          >
            <div
              class="css-1s68mph"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1yplxme-MuiSvgIcon-root"
                data-testid="InsertDriveFileOutlinedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8zM6 20V4h7v5h5v11z"
                />
              </svg>
            </div>
            <div
              style="width: 100%; height: 100%;"
            >
              <div
                style="height: 100%;"
              >
                <div
                  class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth css-1e8l9jl-MuiInputBase-root"
                  spellcheck="true"
                >
                  <input
                    class="MuiInputBase-input Editable octo-propertyvalue css-f5ijlv-MuiInputBase-input"
                    placeholder="Untitled"
                    type="text"
                    value="Page Title"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="open-button"
            data-test="database-open-button-card-1"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-ihfry6-MuiTypography-root-MuiLink-root"
              href="/card-1"
              style="text-decoration: none;"
            >
              <button
                class="Button size--small"
                type="button"
              >
                <span>
                  Open
                </span>
              </button>
            </a>
          </div>
        </div>
      </div>
      <div
        class="octo-table-cell"
        data-test="database-card-card-1-column-property1"
        style="align-items: flex-start; width: 100px; overflow-x: hidden;"
      >
        <div
          style="width: 100%; height: 100%;"
        >
          <div
            style="height: 100%;"
          >
            <div
              class="MuiStack-root css-1gl94ry-MuiStack-root"
              data-test="closed-select-input"
            >
              <div
                class="MuiStack-root css-1a59yxd-MuiStack-root"
                data-test="select-preview"
              >
                <div
                  class="MuiStack-root css-b3ouwx-MuiStack-root"
                  data-mui-internal-clone-element="true"
                >
                  <div
                    class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorTurquoise MuiChip-filledTurquoise css-1b9i3vx-MuiChip-root"
                    data-test="select-preview-value-value1"
                  >
                    <span
                      class="MuiChip-label MuiChip-labelSmall css-3fh3fk-MuiChip-label"
                    >
                      value 1
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="octo-table-cell"
        data-test="database-card-card-1-column-property2"
        style="align-items: flex-start; width: 100px; overflow-x: hidden;"
      >
        <div
          style="width: 100%; height: 100%;"
        >
          <div
            style="height: 100%;"
          >
            <div
              class="MuiStack-root css-1gl94ry-MuiStack-root"
              data-test="closed-select-input"
            >
              <div
                class="MuiStack-root css-1a59yxd-MuiStack-root"
                data-test="select-preview"
              >
                <div
                  class="MuiStack-root css-b3ouwx-MuiStack-root"
                  data-mui-internal-clone-element="true"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="octo-table-cell"
        style="flex-grow: 1;"
      />
    </div>
  </span>
</div>
`;

exports[`components/table/TableRow should match snapshots with a nested row 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="TableRow octo-table-row hidden"
      data-test="database-row-card-1"
      style="z-index: 85; opacity: 1; cursor: move;"
    >
      <div
        class="MuiStack-root css-1v111ru-MuiStack-root"
      >
        <div
          style="margin-left: 24px;"
        />
      </div>
      <div
        class="octo-table-cell title-cell MuiBox-root css-v7v99c"
      >
        <div
          style="display: flex; width: 100%;"
        >
          <div
            class="octo-icontitle"
            style="align-self: flex-start; align-items: flex-start;"
          >
            <div
              class="css-1s68mph"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1yplxme-MuiSvgIcon-root"
                data-testid="InsertDriveFileOutlinedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8zM6 20V4h7v5h5v11z"
                />
              </svg>
            </div>
            <div
              style="width: 100%; height: 100%;"
            >
              <div
                style="height: 100%;"
              >
                <div
                  class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth css-1e8l9jl-MuiInputBase-root"
                  spellcheck="true"
                >
                  <input
                    class="MuiInputBase-input Editable octo-propertyvalue css-f5ijlv-MuiInputBase-input"
                    placeholder="Untitled"
                    type="text"
                    value="Page Title"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="open-button"
            data-test="database-open-button-card-1"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-ihfry6-MuiTypography-root-MuiLink-root"
              href="/card-1"
              style="text-decoration: none;"
            >
              <button
                class="Button size--small"
                type="button"
              >
                <span>
                  Open
                </span>
              </button>
            </a>
          </div>
        </div>
      </div>
      <div
        class="octo-table-cell"
        data-test="database-card-card-1-column-property1"
        style="align-items: flex-start; width: 100px; overflow-x: hidden;"
      >
        <div
          style="width: 100%; height: 100%;"
        >
          <div
            style="height: 100%;"
          >
            <div
              class="MuiStack-root css-1nonphc-MuiStack-root"
              data-test="closed-select-input"
            >
              <div
                class="MuiStack-root css-1a59yxd-MuiStack-root"
                data-test="select-preview"
              >
                <div
                  class="MuiStack-root css-b3ouwx-MuiStack-root"
                  data-mui-internal-clone-element="true"
                >
                  <div
                    class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorTurquoise MuiChip-filledTurquoise css-d6lf3r-MuiChip-root"
                    data-test="select-preview-value-value1"
                  >
                    <span
                      class="MuiChip-label MuiChip-labelSmall css-3fh3fk-MuiChip-label"
                    >
                      value 1
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="octo-table-cell"
        data-test="database-card-card-1-column-property2"
        style="align-items: flex-start; width: 100px; overflow-x: hidden;"
      />
      <div
        class="octo-table-cell"
        style="flex-grow: 1;"
      />
    </div>
  </span>
</div>
`;
